<resources>
    <string name="app_name">Popular Movies</string>
    <string name="app_refresh">Refresh</string>
    <string name="app_sort_popularity">Sort by Popularity</string>
    <string name="app_sort_popularity_descending">Sort by Popularity (desc)</string>
    <string name="app_sort_popularity_ascending">Sort by Popularity (asc)</string>
    <string name="app_sort_rating">Sort by Rating</string>
    <string name="app_sort_rating_descending">Sort by Rating (desc)</string>
    <string name="app_sort_rating_ascending">Sort by Rating (asc)</string>
    <string name="app_sort_favourites">Favourites (Offline)</string>

    <!-- MOVIE -->
    <string name="movie_release_date">Released: </string>
    <string name="movie_release_date_default">N/A</string>
    <string name="movie_rating">Rating: </string>
    <string name="movie_rating_default">No Rating</string>
    <string name="movie_plot_synopsis">Description</string>
    <string name="movie_poster_content_description">The primary movie poster</string>
    <string name="movie_trailers">Trailers</string>
    <string name="movie_reviews">Reviews</string>
    <string name="movie_review_content_description">An icon to represent play/collection</string>
    <string name="movie_favourite_content_description">A symbol to represent a star</string>

    <!-- ERROR -->
    <string name="movie_load_error">Could not display the movies, none were returned. Please check your internet connection.</string>
</resources>
