<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    tools:context=".MovieActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_movie_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />
        <ImageView
            android:id="@+id/iv_movie_image"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:contentDescription="@string/movie_poster_content_description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="0dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_movie_release_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="0dp"
                android:text="@string/movie_release_date"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/tv_movie_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="0dp"
                android:text="@string/movie_release_date_default" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_movie_rating_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="0dp"
                android:text="@string/movie_rating"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/tv_movie_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="0dp"
                android:text="@string/movie_rating_default" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_movie_trailers_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="0dp"
            android:text="@string/movie_trailers"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />
        <android.support.v7.widget.RecyclerView
            android:id="@+id/rview_movie_trailers"
            android:scrollbars="horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

        <TextView
            android:id="@+id/tv_movie_reviews_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="0dp"
            android:text="@string/movie_reviews"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />
        <android.support.v7.widget.RecyclerView
            android:id="@+id/rview_movie_reviews"
            android:scrollbars="horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <TextView
            android:id="@+id/tv_movie_plot_synopsis_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="0dp"
            android:text="@string/movie_plot_synopsis"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tv_movie_plot_synopsis"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>